<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidbackground"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/MyNanoDegreeTitle"
            android:id="@+id/textView"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/SpotifyApp"
            android:id="@+id/button1"
            android:layout_gravity= "center_horizontal"
            android:gravity="center"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/FootBallApp"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/LibraryApp"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/BuildItBigger"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/XYXReader"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/CapstoneApp"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

    </LinearLayout>
</RelativeLayout>
